// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueVirtualDocument/baseline feature-completions/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld n /><span >Name: {name +}</span><p ></p>{() ? (<p ></p>) :null} {'<'}{'>'} </>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/JavascriptSetup.vue 1`] = `
import _Ctx from './JavascriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld n /><span >Name: {name +}</span><p ></p>{() ? (<p ></p>) :null} {'<'}{'>'} </>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/Typescript.vue 1`] = `
import _Ctx from './Typescript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld n /><span >Name: {name +}</span><p ></p>{() ? (<p ></p>) :null} {'<'}{'>'} </>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/TypescriptSetup.vue 1`] = `
import _Ctx from './TypescriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld n /><span >Name: {name +}</span><p ></p>{() ? (<p ></p>) :null} {'<'}{'>'} </>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/auto-import/NoScript.vue 1`] = `
import _Ctx from './NoScript.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><My ></My></div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/auto-import/ScriptWithComponents.vue 1`] = `
import _Ctx from './ScriptWithComponents.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><My ></My></div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/auto-import/ScriptWithEmptyOptions.vue 1`] = `
import _Ctx from './ScriptWithEmptyOptions.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><My ></My></div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/auto-import/ScriptWithNoComponents.vue 1`] = `
import _Ctx from './ScriptWithNoComponents.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><My ></My></div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/auto-import/ScriptWithSetup.vue 1`] = `
import _Ctx from './ScriptWithSetup.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><My ></My></div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-completions/src/components/MyWorld.vue 1`] = `
import _Ctx from './MyWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/FeatureSetup.vue 1`] = `
import _Ctx from './FeatureSetup.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({str,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >{str.toLocaleLowerCase()}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/GlobalComponent.vue 1`] = `
import _Ctx from './GlobalComponent.vue?internal'
import JavaScriptSetupPropsOption from './components/JavaScriptSetupPropsOption.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><Transition ><JavaScriptPropsOption /><JavaScriptSetupPropsOption /></Transition></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/MissingKeysInObjectProp.vue 1`] = `
import _Ctx from './MissingKeysInObjectProp.vue?internal'
import TypeScriptPropsType from './components/TypeScriptPropsType.vue'
import TypeScriptPropsOption from './components/TypeScriptPropsOption.vue'
import TypeScriptSetupPropsDeclare from './components/TypeScriptSetupPropsDeclare.vue'
import TypeScriptSetupPropsOption from './components/TypeScriptSetupPropsOption.vue'
import JavaScriptPropsOption from './components/JavaScriptPropsOption.vue'
import JavaScriptSetupPropsOption from './components/JavaScriptSetupPropsOption.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><TypeScriptPropsType object={{}} /><TypeScriptPropsOption object={{}} /><TypeScriptSetupPropsDeclare object={{}} /><TypeScriptSetupPropsOption object={{}} /><JavaScriptPropsOption object={{}} /><JavaScriptSetupPropsOption object={{}} /></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/MissingRequiredProp.vue 1`] = `
import _Ctx from './MissingRequiredProp.vue?internal'
import TypeScriptPropsType from './components/TypeScriptPropsType.vue'
import TypeScriptPropsOption from './components/TypeScriptPropsOption.vue'
import TypeScriptSetupPropsDeclare from './components/TypeScriptSetupPropsDeclare.vue'
import TypeScriptSetupPropsOption from './components/TypeScriptSetupPropsOption.vue'
import JavaScriptPropsOption from './components/JavaScriptPropsOption.vue'
import JavaScriptSetupPropsOption from './components/JavaScriptSetupPropsOption.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><TypeScriptPropsType /><TypeScriptPropsOption /><TypeScriptSetupPropsDeclare /><TypeScriptSetupPropsOption /><JavaScriptPropsOption /><JavaScriptSetupPropsOption /></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/NestedVIf.vue 1`] = `
import _Ctx from './NestedVIf.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({msg,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div >{(msg) ? (<img alt="Vue logo" src="./assets/logo.png" />) :null}</div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/NoErrors.vue 1`] = `
import _Ctx from './NoErrors.vue?internal'
import TypeScriptPropsType from './components/TypeScriptPropsType.vue'
import TypeScriptPropsOption from './components/TypeScriptPropsOption.vue'
import TypeScriptSetupPropsDeclare from './components/TypeScriptSetupPropsDeclare.vue'
import TypeScriptSetupPropsOption from './components/TypeScriptSetupPropsOption.vue'
import JavaScriptPropsOption from './components/JavaScriptPropsOption.vue'
import JavaScriptSetupPropsOption from './components/JavaScriptSetupPropsOption.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><TypeScriptPropsType stringFull="value" numberFull={1} booleanFull={true} objectFull={{ id: 1 }} arrayFull={[{ id: 1 }]} unionFull={1} /><TypeScriptPropsOption stringFull="value" numberFull={1} booleanFull={true} objectFull={{ id: 1 }} arrayFull={[{ id: 1 }]} unionFull={1} /><TypeScriptSetupPropsDeclare stringFull="value" numberFull={1} booleanFull={true} objectFull={{ id: 1 }} arrayFull={[{ id: 1 }]} unionFull={1} /><TypeScriptSetupPropsOption stringFull="value" numberFull={1} booleanFull={true} objectFull={{ id: 1 }} arrayFull={[{ id: 1 }]} unionFull={1} /><JavaScriptPropsOption stringFull="value" numberFull={1} booleanFull={true} objectFull={{ id: 1 }} arrayFull={[{ id: 1 }]} unionFull={1} /><JavaScriptSetupPropsOption stringFull="value" numberFull={1} booleanFull={true} objectFull={{ id: 1 }} arrayFull={[{ id: 1 }]} unionFull={1} /></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/Slot.vue 1`] = `
import _Ctx from './Slot.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({str, num,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div {...({[str]: num})} class={num} >{_ctx.$slots.default({ str, num })}{_ctx.$slots["other"]({ str, num })}{_ctx.$slots[str]({ str, num })}{_ctx.$slots.default({...({ str, num }), foo:true, bar:"bar",["baz"]:str,[str]:num,[num]:true,})?? (<><div >fallback {str} and {num}</div></>)}</div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/SlotType.vue 1`] = `
import _Ctx from './SlotType.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({str, num,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div >{_ctx.$slots.default({ str, num })}</div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/SlotTypeUsage.vue 1`] = `
import _Ctx from './SlotTypeUsage.vue?internal'
import SlotType from './SlotType.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({str, num,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><SlotType >{{
    default: ({ str, num }) => (<>{str} {num}</>)
  }}</SlotType></div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/UnknownKeysInObjectProp.vue 1`] = `
import _Ctx from './UnknownKeysInObjectProp.vue?internal'
import TypeScriptPropsType from './components/TypeScriptPropsType.vue'
import TypeScriptPropsOption from './components/TypeScriptPropsOption.vue'
import TypeScriptSetupPropsDeclare from './components/TypeScriptSetupPropsDeclare.vue'
import TypeScriptSetupPropsOption from './components/TypeScriptSetupPropsOption.vue'
import JavaScriptPropsOption from './components/JavaScriptPropsOption.vue'
import JavaScriptSetupPropsOption from './components/JavaScriptSetupPropsOption.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><TypeScriptPropsType object={{ id: 1, unknown: '' }} /><TypeScriptPropsOption object={{ id: 1, unknown: '' }} /><TypeScriptSetupPropsDeclare object={{ id: 1, unknown: '' }} /><TypeScriptSetupPropsOption object={{ id: 1, unknown: '' }} /><JavaScriptPropsOption object={{ id: 1, unknown: '' }} /><JavaScriptSetupPropsOption object={{ id: 1, unknown: '' }} /></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/UsingRouter.vue 1`] = `
import _Ctx from './UsingRouter.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><RouterView ><Component /></RouterView></div></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/VFor.vue 1`] = `
import _Ctx from './VFor.vue?internal'


declare function _renderList(source: string, renderItem: (value: string, index: number) => any): any[];
declare function _renderList(source: number, renderItem: (value: number, index: number) => any): any[];
declare function _renderList<T>(source: T[], renderItem: (value: T, index: number) => any): any[];
declare function _renderList<T>(source: Iterable<T>, renderItem: (value: T, index: number) => any): any[];
declare function _renderList<T extends object>(source: T, renderItem: <K extends keyof T>(value: T[K], key: K, index: number) => any): any[];
declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({num, str, arr, obj, itr, boo, sym,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<>{_renderList(num, (n) => {
    return <><div >{n}</div></>
  })}{_renderList(num, (n, i) => {
    return <><div >{n}:{i}</div></>
  })}{_renderList(str, (s) => {
    return <><div >{s}</div></>
  })}{_renderList(str, (s, i) => {
    return <><div >{s}:{i}</div></>
  })}{_renderList(arr, (a) => {
    return <><div >{a}</div></>
  })}{_renderList(arr, ({ value }) => {
    return <><div >{value}</div></>
  })}{_renderList(arr, ({ foo }) => {
    return <><div >{arr}</div></>
  })}{_renderList(arr, (a, i) => {
    return <><div >{a}:{i}</div></>
  })}{_renderList(arr, ({ value }, i) => {
    return <><div >{value}:{i}</div></>
  })}{_renderList(obj, (o) => {
    return <><div >{o}</div></>
  })}{_renderList(obj, (o, k) => {
    return <><div >{o}:{k}</div></>
  })}{_renderList(obj, (o, k, i) => {
    return <><div >{o}:{k}:{i}</div></>
  })}{_renderList(itr, (t) => {
    return <><div >{t}</div></>
  })}{_renderList(boo, (b) => {
    return <><div >{b}</div></>
  })}{_renderList(sym, (s) => {
    return <><div >{s}</div></>
  })}</>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/VIf.vue 1`] = `
import _Ctx from './VIf.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({isVerified, user,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<>{(isVerified === true) ? (<div >Verified</div>) :null}{(user === true) ? (<div >{user.name}</div>) :(<div >{user} has no name</div>)}{(user == null) ? (<div >{user.name}</div>) :(user != null) ? (<div >{user.name}</div>) :(<div >{user} has no name</div>)}</>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/VModel.vue 1`] = `
import _Ctx from './VModel.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({asConst, asRef, asComputed, asComputedWritable, asReactive, asReadonly,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><input value={asConst}  onChange={($event) => (asConst = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asConst}  onChange={($event) => (asConst = Number(($event as Event & {target:HTMLInputElement}).target.value))} /><input value={asRef}  onChange={($event) => (asRef = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asRef}  onChange={($event) => (asRef = Number(($event as Event & {target:HTMLInputElement}).target.value))} /><input value={asComputed}  onChange={($event) => (asComputed = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asComputed}  onChange={($event) => (asComputed = Number(($event as Event & {target:HTMLInputElement}).target.value))} /><input value={asComputedWritable}  onChange={($event) => (asComputedWritable = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asComputedWritable}  onChange={($event) => (asComputedWritable = Number(($event as Event & {target:HTMLInputElement}).target.value))} /><input value={asReactive}  onChange={($event) => (asReactive = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asReactive}  onChange={($event) => (asReactive = Number(($event as Event & {target:HTMLInputElement}).target.value))} /><input value={asReactive.foo}  onChange={($event) => (asReactive.foo = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asReactive.foo}  onChange={($event) => (asReactive.foo = Number(($event as Event & {target:HTMLInputElement}).target.value))} /><input value={asReadonly}  onChange={($event) => (asReadonly = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asReadonly}  onChange={($event) => (asReadonly = Number(($event as Event & {target:HTMLInputElement}).target.value))} /><input value={asReadonly.foo}  onChange={($event) => (asReadonly.foo = ($event as Event & {target:HTMLInputElement}).target.value)} /><input value={asReadonly.foo}  onChange={($event) => (asReadonly.foo = Number(($event as Event & {target:HTMLInputElement}).target.value))} /></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/VOn.vue 1`] = `
import _Ctx from './VOn.vue?internal'
import WithEmits from './components/WithEmits.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({console,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><WithEmits onWave={$event =>console.log($event)} /></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/WrongPropType.vue 1`] = `
import _Ctx from './WrongPropType.vue?internal'
import TypeScriptPropsType from './components/TypeScriptPropsType.vue'
import TypeScriptPropsOption from './components/TypeScriptPropsOption.vue'
import TypeScriptSetupPropsDeclare from './components/TypeScriptSetupPropsDeclare.vue'
import TypeScriptSetupPropsOption from './components/TypeScriptSetupPropsOption.vue'
import JavaScriptPropsOption from './components/JavaScriptPropsOption.vue'
import JavaScriptSetupPropsOption from './components/JavaScriptSetupPropsOption.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><TypeScriptPropsType string={1} /><TypeScriptPropsOption string={1} /><TypeScriptSetupPropsDeclare string={1} /><TypeScriptSetupPropsOption string={1} /><JavaScriptPropsOption string={1} /><JavaScriptSetupPropsOption string={1} /></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/components/JavaScriptPropsOption.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/components/JavaScriptSetupPropsOption.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/components/TypeScriptPropsOption.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/components/TypeScriptPropsType.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/components/TypeScriptSetupPropsDeclare.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/components/TypeScriptSetupPropsOption.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-diagnostics/src/components/WithEmits.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/JavascriptSetup.vue 1`] = `
import _Ctx from './JavascriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/Typescript.vue 1`] = `
import _Ctx from './Typescript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/TypescriptSetup.vue 1`] = `
import _Ctx from './TypescriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name, email, code, fullname, altCode,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><span >Name: {name}</span><span >Email: {email}</span><span >Code: {code}</span></p><p ><span >FullName: {fullname}</span><span >AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/JavascriptSetup.vue 1`] = `
import _Ctx from './JavascriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name, email, code, fullname, altCode,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><span >Name: {name}</span><span >Email: {email}</span><span >Code: {code}</span></p><p ><span >FullName: {fullname}</span><span >AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/Typescript.vue 1`] = `
import _Ctx from './Typescript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name, email, code, fullname, altCode,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><span >Name: {name}</span><span >Email: {email}</span><span >Code: {code}</span></p><p ><span >FullName: {fullname}</span><span >AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/TypescriptSetup.vue 1`] = `
import _Ctx from './TypescriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name, email, code, fullname, altCode,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><span >Name: {name}</span><span >Email: {email}</span><span >Code: {code}</span></p><p ><span >FullName: {fullname}</span><span >AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-refactor/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare function _renderList(source: string, renderItem: (value: string, index: number) => any): any[];
declare function _renderList(source: number, renderItem: (value: number, index: number) => any): any[];
declare function _renderList<T>(source: T[], renderItem: (value: T, index: number) => any): any[];
declare function _renderList<T>(source: Iterable<T>, renderItem: (value: T, index: number) => any): any[];
declare function _renderList<T extends object>(source: T, renderItem: <K extends keyof T>(value: T[K], key: K, index: number) => any): any[];
declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({one, decrease, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><div ><HelloWorld name="Jane" />{(one) ? (<p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p>) :null}{(one) ? (<div >{two}</div>) :(two) ? (<div >{one}</div>) :(<div >{one + two}</div>)}{(one) ? (<div >{_renderList(one, (item) => {
    return <><div >{item} {two}</div></>
  })}</div>) :null}</div><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-refactor/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/JavascriptSetup.vue 1`] = `
import _Ctx from './JavascriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/Typescript.vue 1`] = `
import _Ctx from './Typescript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/TypescriptSetup.vue 1`] = `
import _Ctx from './TypescriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({decrease, one, increase, two, name, email, code,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane" /><p ><button onClick={decrease} >-</button> {one} <button onClick={increase} >+</button> and double is {two}</p><p >Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/node_modules/library-vetur-component-data/src/VeturComponent.vue 1`] = `
import _Ctx from './VeturComponent.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/node_modules/library-web-types/src/WebTypesComponent.vue 1`] = `
import _Ctx from './WebTypesComponent.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import LocalComponent from './components/LocalComponent.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><Transition ><LocalComponent /><GlobalComponent /><TSGlobalComponent /><AnotherGlobalComponent /><WildcardGlobalComponent /><WildcardTSGlobalComponent /><NotAGlobalComponent /><VeturComponent /><WebTypesComponent /><VeturComponent name={1} /><WebTypesComponent name={1} /></Transition></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/src/components/AnotherGlobalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/src/components/GlobalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/src/components/LocalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/src/components/NotAGlobalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-vue-project-configured/src/components/globals/WildcardGlobalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-vue-project-inferred/node_modules/library-vetur-component-data/src/VeturComponent.vue 1`] = `
import _Ctx from './VeturComponent.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-vue-project-inferred/node_modules/library-web-types/src/WebTypesComponent.vue 1`] = `
import _Ctx from './WebTypesComponent.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-vue-project-inferred/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import LocalComponent from './components/LocalComponent.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><Transition ><LocalComponent /><GlobalComponent /><NotAGlobalComponent /><VeturComponent name={1} /><WebTypesComponent name={1} /></Transition></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-vue-project-inferred/src/components/GlobalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-vue-project-inferred/src/components/LocalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline feature-vue-project-inferred/src/components/NotAGlobalComponent.vue 1`] = ``;

exports[`VueVirtualDocument/baseline javascript/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><main ><h1 >A sample vue application</h1><HelloWorld name="Rahul" /></main></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript-with-config/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><main ><h1 >A sample vue application</h1><HelloWorld name="Rahul" /></main></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript-with-config/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline library-vetur-component-data/src/VeturComponent.vue 1`] = `
import _Ctx from './VeturComponent.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline library-web-types/src/WebTypesComponent.vue 1`] = `
import _Ctx from './WebTypesComponent.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><main ><h1 >A sample vue application</h1><HelloWorld name="Rahul" /></main></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript-with-config/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><main ><h1 >A sample vue application</h1><HelloWorld name="Rahul" /></main></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript-with-config/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


declare const __completionsTrigger: InstanceType<typeof _Ctx>
__completionsTrigger./*@@vue:completions*/$props
const __completionsTag = /*@@vue:completionsTag*/<div />
export function render({name,..._ctx}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><p >Hello {name}!</p></>/*@@vue:end*/
}
`;
